<resources>
    <string name="app_name">ToDoProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_task">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="little">Низкая</string>
    <string name="big">!!Высокая</string>
    <string name="importance">Важность</string>
    <string name="no">Нет</string>
    <string name="deadline">Сделать до</string>
    <string name="delete">Удалить</string>
    <string name="whatTask">Что надо сделать...</string>
    <string name="month0">января</string>
    <string name="month1">февраля</string>
    <string name="month2">марта</string>
    <string name="month3">апреля</string>
    <string name="month4">мая</string>
    <string name="month5">июня</string>
    <string name="month6">июля</string>
    <string name="month7">августа</string>
    <string name="month8">сентября</string>
    <string name="month9">октября</string>
    <string name="month10">ноября</string>
    <string name="month11">декабря</string>
</resources>