<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TaskActivity"
    android:background="@color/BackPrimary"
    tools:showIn="@layout/activity_task">

    <LinearLayout
        android:background="@color/BackPrimary"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:background="@color/BackSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="15dp">
            <EditText
                android:id="@+id/editTextTask"
                android:padding="10dp"
                android:gravity="top"
                android:background="@color/BackSecondary"
                android:layout_margin="4dp"
                android:minHeight="130dp"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/whatTask"
                />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id = "@+id/importanceContainer"
            android:layout_marginTop="30dp"
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text = "@string/importance"
                android:id = "@+id/importance"
                android:textSize="18sp"
                android:textColor="@color/LabelPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="2dp"
                android:text = "@string/no"
                android:id = "@+id/statusImportance"
                android:textSize="18sp"
                android:textColor="@color/LabelSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/GrayLight"/>

        <LinearLayout
            android:id = "@+id/deadlineContainer"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:text = "@string/deadline"
                    android:id = "@+id/deadlineTitle"
                    android:textSize="18sp"
                    android:textColor="@color/LabelPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id = "@+id/deadlineText"
                    android:textSize="15sp"
                    android:textColor="@color/Blue"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_gravity="center"
                android:layout_weight="0"
                android:id="@+id/switchDeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/> />

        </LinearLayout>
        <TextView
            android:visibility="gone"
            android:layout_marginTop="2dp"
            android:id = "@+id/data"
            android:textSize="18sp"
            android:textColor="@color/LabelSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/GrayLight"/>

        <LinearLayout
            android:id="@+id/deleteContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/deleteImage"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src = "@drawable/ic_delete"
                android:background="#00000000"
                app:tint = "@color/Red"
                />

            <TextView
                android:textSize="18sp"
                android:textColor="@color/Red"
                android:layout_weight="1"
                android:id='@+id/deleteText'
                android:layout_gravity="center"
                android:gravity="center|left"
                android:text="@string/delete"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>